test/test_suite2/errors/more_optional_tests.c3
module foo;

fault Foo { ABC }

fn void test()
{
	int x = Foo.ABC! ?? 123;
}

fn void test2()
{
	int! y = Foo.ABC! ?? Foo.ABC!; // #error: The default value may not be an optional
}